# active-rlhf

./: .gitignore  README.md  REPLAY_BUFFER_USAGE.md  pyproject.toml
results/overhead/: overhead_ant.csv  overhead_ant_aggregated.csv  overhead_ant_table.tex  overhead_combined_table.csv  overhead_combined_table.tex  overhead_halfcheetah.csv  overhead_halfcheetah_aggregated.csv  overhead_halfcheetah_table.tex  overhead_hopper.csv  overhead_hopper_aggregated.csv  overhead_hopper_table.tex  overhead_walker.csv  overhead_walker_aggregated.csv  overhead_walker_table.tex
results/raw/: runs_ant_800.csv  runs_halfcheetah_400.csv  runs_hopper_400.csv  runs_walker_400.csv
scripts/: generate-seeds.sh  pref_ppo.sh  test_sweep_ant_duo.sh  test_sweep_ant_hybrid.sh  test_sweep_ant_random.sh  test_sweep_ant_variquery.sh  test_sweep_halfcheetah_duo.sh  test_sweep_halfcheetah_hybrid.sh  test_sweep_halfcheetah_variquery.sh  test_sweep_hopper_duo.sh  test_sweep_hopper_hybrid.sh  test_sweep_hopper_random.sh  test_sweep_hopper_variquery.sh  test_sweep_walker_duo.sh  test_sweep_walker_hybrid.sh  test_sweep_walker_random.sh  test_sweep_walker_variquery.sh  vae_test.sh
slurm/: experiment.sbatch  prepare_lmu_slurm.sh  run_experiment.sh
sweep/: ppo_rewardnet_baseline_sweep.yaml  ppo_rewardnet_baseline_sweep_ant.yaml  ppo_rewardnet_baseline_sweep_halfcheetah.yaml  ppo_rewardnet_baseline_sweep_hopper.yaml  ppo_rewardnet_baseline_sweep_walker.yaml  variquery_vae_sweep_ant.yaml  variquery_vae_sweep_halfcheetah.yaml  variquery_vae_sweep_hopper.yaml  variquery_vae_sweep_walker.yaml
(+37 files in other folders)
